--- a/mic.html
+++ b/mic.html
@@ -6,7 +6,9 @@
 <title>Microphone Recorder</title>
 </head>
 <body>
-<select id="audioInputDevices"></select><br><br>
+<select id="audioInputDevices">
+    <option>1</option>
+</select><br><br>
 <button id="startRecord">Start Recording</button>
 <button id="stopRecord" disabled>Stop Recording</button>
 <button id="play" disabled>Play Recording</button>
