--- a/mic.html
+++ b/mic.html
@@ -8,10 +8,12 @@
 <body>
 <select id="audioInputDevices">
     <option>1</option>
-</select><br><br>
+</select>
+<br><br>
 <button id="startRecord">Start Recording</button>
 <button id="stopRecord" disabled>Stop Recording</button>
 <button id="play" disabled>Play Recording</button>
+<br><br>
 <audio id="audioPlayback" controls></audio>
 
 <script>
