--- a/mic.html
+++ b/mic.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <select id="audioInputDevices">
-    <option>1</option>
+    <option>No input</option>
 </select>
 <br><br>
 <button id="startRecord">Start Recording</button>
