navigator.mediaDevices.getUserMedia

--- a/mic.html
+++ b/mic.html
@@ -28,7 +28,7 @@ window.addEventListener('DOMContentLoaded', () => {
   let recordedChunks = [];
 
   
-  navigator.getUserMedia (
+  navigator.mediaDevices.getUserMedia (
    // constraints
    {
       audio: true
