--- a/mic.html
+++ b/mic.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <select id="audioInputDevices">
-    <option value="1"></option>
+    <option>1</option>
 </select><br><br>
 <button id="startRecord">Start Recording</button>
 <button id="stopRecord" disabled>Stop Recording</button>
