--- a/mic.html
+++ b/mic.html
@@ -42,7 +42,7 @@ window.addEventListener('DOMContentLoaded', () => {
     }
   }
 
-  updateAudioInputDevices();
+    //   updateAudioInputDevices();
 
   // Start recording function
   async function startRecording() {
