--- a/mic.html
+++ b/mic.html
@@ -30,7 +30,7 @@ window.addEventListener('DOMContentLoaded', () => {
     try {
       const devices = await navigator.mediaDevices.enumerateDevices();
       //audioInputDevicesSelect.innerHTML = '';
-      const audioInputDevices = devices.filter(device => device.kind === 'audioinput' || (device.kind === 'audioinput' && device.deviceType === 'audioinput'));
+      const audioInputDevices = devices.filter(device => device.kind === 'audioinput');
       audioInputDevices.forEach(device => {
         const option = document.createElement('option');
         option.value = device.deviceId;
